src/test/deca/context/invalid/ContextSansObjet/OperationsBooleennes/GtIntString.deca
//Description:
//  Vérification contextuelle de > avec des types incompatibles (int, string)
//
//Résultat:
//  Erreur contextuelle
//  ligne 9 : types non compatibles pour faire la comparaison
{
    int x = 1;
    x > "0" ;
}